--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 				</exclusion>
 			</exclusions>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
